--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="sign_in">Sign In</string>
     <string name="don_t_have_an_account">Don`t have an account?</string>
     <string name="let_s_register">Let`s Register</string>
+    <string name="text_text">SIGN UP</string>
+    <string name="text_text2">Let create you an account</string>
+    <string name="confirm_password">Confirm password</string>
+    <string name="button_text">Sign Up</string>
 </resources>
